# fastapi-rabbitmq

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: emit-events.sh
src/common/: enums.py  settings.py
src/consumer/: main.py
src/producer_consumer/: main.py
