[project]
name = "fastapi-rabbitmq"
version = "0.1"
description = ""
authors = [
    { name = "Brendan McAndrew", email = "19274445+bmcandr@users.noreply.github.com" },
]
dependencies = [
    "celery>=5.3.4",
    "flower>=2.0.1",
    "httpx>=0.25.1",
    "aio-pika>=9.3.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "requests>=2.31.0",
]

requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
"producer_consumer" = ["fastapi>=0.104.1", "uvicorn>=0.24.0.post1"]

[tool.pdm.dev-dependencies]
dev = ["isort>=5.12.0", "pytest>=7.4.3", "ruff>=0.1.5"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]
